# imgdl-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: build.yml
docker/bot/: Dockerfile
docker/gateway/: example.gateway.toml
src/: cli.yml  config.rs  discord.rs  index.ts  main.rs  util.rs
src/bot/: index.ts
src/bot/client/: Client.ts  ImgDlClient.ts
src/bot/commands/owner/: eval.ts  reload.ts
src/bot/commands/system/: download.ts
src/bot/commands/util/: help.ts  ping.ts  prefix.ts
src/bot/listeners/client/: error.ts  guildCreate.ts  ready.ts
src/bot/listeners/commandHandler/: missingPermissions.ts
src/bot/structures/: Download.ts  DownloadManager.ts  ImgDlCommand.ts
src/bot/util/: constants.ts  index.ts
src/commands/: config.rs  mod.rs  whoami.rs
src/database/: index.ts
src/database/models/: Guild.ts
src/database/structures/: SettingsProvider.ts
src/downloader/: Cargo.toml
